# bevy_gizmos

./: Cargo.toml  README.md
examples/: showcase.rs
src/: bones.rs  gen.rs  gizmo.frag  gizmo.vert  lib.rs  line.rs  material.rs  mesh_helper.rs
src/render_graph/: mod.rs  screen_info_node.rs
src/render_graph/shaders/: gizmo.frag  gizmo.vert
src/rendering/: mod.rs  screen_info_node.rs
src/rendering/shaders/: gizmo.frag  gizmo.vert
