[package]
name = "bevy_gizmos"
version = "0.1.0"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
edition = "2018"

[dependencies]
# TODO: Limit the crates dependencies (mainly to reduce compile times)
bevy = { git = "https://github.com/lassade/bevy.git", branch = "animations" }

smallvec = "1.6.1"
crossbeam = "0.8.0"

[[example]]
name = "showcase"