[package]
name = "bevy_gizmos"
version = "0.5.0"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
edition = "2018"

[dependencies]
# TODO: Limit the crates dependencies (mainly to reduce compile times)
bevy={git="https://github.com/bevyengine/bevy", branch="main"}

smallvec = "1.6.1"
crossbeam = "0.8.0"

[dev-dependencies] 
# bevy_flycam = { path = "../bevy_flycam" }

[[example]]
name = "showcase"
