[package]
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
edition = "2018"
name = "bevy_gizmos"
version = "0.6.0"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", branch = "main"}

crossbeam = "0.8.0"
smallvec = "1.6.1"

[[example]]
name = "showcase"

[patch.'https://github.com/bevyengine/bevy']
#bevy = {git = "https://github.com/bevyengine/bevy?branch=main", rev = "5ba2b9adcf5e686273cf024acf1ad8ddfb4f8e18"}
bevy = {path = "../bevy"}
